# Mooncake

./: 2026-01-30-this-session-is-being-continued-from-a-previous-co.txt  Dockerfile.arena  core
.github/workflows/: performance_regression.yml
docs/: SHARED_QUOTA_REFACTOR_DESIGN.md
mooncake-store/include/: mmap_arena.h
mooncake-store/src/: CMakeLists.txt  mmap_arena.cpp  mmap_arena.h  utils.cpp
mooncake-store/tests/: CMakeLists.txt
mooncake-transfer-engine/benchmark/: CMakeLists.txt
mooncake-transfer-engine/benchmark/control_plane/: CMakeLists.txt  README.md  control_plane_rpc_bench.cpp
mooncake-transfer-engine/benchmark/shm/: CMakeLists.txt  README.md  honest_bench.cpp  integrity_validation_bench.cpp  shm_address_lookup_bench.cpp  shm_allocation_bench.cpp  shm_arena_bench.cpp  shm_transfer_bench.cpp
mooncake-transfer-engine/src/: transfer_engine.cpp
mooncake-transfer-engine/tent/include/tent/transport/shm/: shm_arena.h  shm_transport.h
mooncake-transfer-engine/tent/src/python/: CMakeLists.txt  pybind.cpp
mooncake-transfer-engine/tent/src/transport/shm/: CMakeLists.txt  README_ARENA.md  shm_arena.cpp  shm_transport.cpp  shm_transport_arena.cpp
mooncake-transfer-engine/tent/tests/: CMakeLists.txt  shm_arena_test.cpp  shm_transport_arena_integration_test.cpp
scripts/: README_TESTING.md  benchmark_comparison.sh  build_benchmarks.sh  generate_performance_report.py  regression_test.py  run_all_benchmarks.sh
